More API implementation. Some tests fail. See: https://github.com/MediaCrush/MediaCrush/issues/356

--- a/TestSharpCrush/TestSharpCrush.csproj
+++ b/TestSharpCrush/TestSharpCrush.csproj
@@ -72,7 +72,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="TestFiles\jaypeg.jpeg">
+    <Content Include="TestFiles\jaypeg.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="TestFiles\jiffy.gif">
