--- a/SharpCrush 4/SharpCrush 4.csproj
+++ b/SharpCrush 4/SharpCrush 4.csproj
@@ -51,13 +51,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Results\DeleteFileResult.cs" />
     <Compile Include="Results\FileUploadResult.cs" />
-    <Compile Include="Results\GetFileResult.cs" />
+    <Compile Include="Results\GetFileStatusResult.cs" />
     <Compile Include="Results\UrlUploadResult.cs" />
     <Compile Include="SharpCrushFile.cs" />
     <Compile Include="SharpCrushMediaFile.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
